# cookiecutter-poetry-template

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/.github/: dependabot.yml
{{ cookiecutter.project_slug }}/.github/workflows/: build-and-publish-docs.yml  ci.yml
{{ cookiecutter.project_slug }}/configs/: .gitkeep
{{ cookiecutter.project_slug }}/data/outputs/: .gitkeep
{{ cookiecutter.project_slug }}/data/processed/: .gitkeep
{{ cookiecutter.project_slug }}/data/raw/: .gitkeep
{{ cookiecutter.project_slug }}/docs/: Makefile  make.bat
{{ cookiecutter.project_slug }}/docs/source/: api.rst  conf.py  index.rst
{{ cookiecutter.project_slug }}/notebooks/: .gitkeep
{{ cookiecutter.project_slug }}/tests/: conftest.py  test_init.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: __init__.py
