[project]
name = "{{cookiecutter.project_slug}}"
version = "{{ cookiecutter.version }}"
description = "{{cookiecutter.project_description}}"
authors = [{ name = "{{cookiecutter.author}}", email = "{{cookiecutter.email}}" }]
requires-python = ">={{cookiecutter.python_version}}"
readme = "README.md"
dependencies = [
    "python-dotenv>=1.1,<2",
    "loguru>=0.7,<1",
    "numpy>=2.0,<3",
    "pandas>=2.2,<3",
    "polars>=1.0,<2",
    "pyarrow>=17.0,<19",
    "scikit-learn>=1.5,<2",
    "matplotlib>=3.9,<4",
    "seaborn>=0.13,<1",
    "plotly>=5.22,<6",
    "pydantic>=2.7,<3",
    "httpx>=0.27,<1",
]

[dependency-groups]
dev = [
    "pytest>=8.0,<9",
    "mypy>=1.10,<2",
    "ruff>=0.8,<1",
    "pre-commit>=4.0,<5",
    "ipykernel>=6.29,<7",
    {% if cookiecutter.codecov == 'y' -%}
    "pytest-cov>=5.0,<6",
    {% endif -%}
]

{% if cookiecutter.use_notebooks == 'y' -%}
notebooks = [
    "jupyterlab>=4.2,<5",
    "nbformat>=5.10,<6",
    "nbconvert>=7.16,<8",
]
{%- endif %}

{% if cookiecutter.sphinx == 'y' -%}
docs = [
    "sphinx>=7.3,<8",
    "sphinx-rtd-theme>=2.0,<3",
    "myst-parser>=3.0,<4",
    {% if cookiecutter.use_notebooks == 'y' -%}
    "nbsphinx>=0.9,<1",
    {% endif -%}
]
{%- endif %}

{% if cookiecutter.use_dvc == 'y' -%}
data = [
    "dvc>=3.50,<4",
    "dvc-s3>=3.0,<4",
]
{%- endif %}

[tool.hatch.build.targets.sdist]
include = ["{{cookiecutter.project_slug}}"]

[tool.hatch.build.targets.wheel]
include = ["{{cookiecutter.project_slug}}"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py{{ cookiecutter.python_version.replace('.', '') }}"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "NPY",  # numpy-specific rules
    "PD",   # pandas-vet
]

[tool.ruff.lint.isort]
known-first-party = ["{{cookiecutter.project_slug}}"]

[tool.mypy]
files = ["{{cookiecutter.project_slug}}"]
python_version = "{{cookiecutter.python_version}}"
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

{% if cookiecutter.codecov == "y"-%}
[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["{{cookiecutter.project_slug}}"]
{% endif%}
